--- a/after-production.html
+++ b/after-production.html
@@ -216,7 +216,7 @@
 
         <!-- Sección Cultural -->
         <div class="seccion">
-            <h2 class="seccion-titulo">Cultural</h2>
+            <h2 class="seccion-titulo">Cultura</h2>
             <div class="eventos">
                 <div class="evento evento-imagen">
                     <div class="fecha">31 de Mayo</div>
