--- a/after-production.html
+++ b/after-production.html
@@ -225,6 +225,17 @@
                         <p>Obra de teatro "La justicia en escena"</p>
                     </div>
                 </div>
+
+                <h2 class="seccion-titulo">Cultura</h2>
+            <div class="eventos">
+                <div class="evento evento-imagen">
+                    <div class="fecha">31 de Mayo</div>
+                    <div class="lugar">
+                        <img src="https://picsum.photos/800/600" alt="Cultural">
+                        <h3>Teatro Municipal</h3>
+                        <p>Obra de teatro "La justicia en escena"</p>
+                    </div>
+                </div>
                 
                 <div class="evento">
                     <div class="fecha">1 de Junio</div>
