--- a/after-production.html
+++ b/after-production.html
@@ -235,6 +235,7 @@
                         <p>Obra de teatro "La justicia en escena"</p>
                     </div>
                 </div>
+            </div>
                 
                 <div class="evento">
                     <div class="fecha">1 de Junio</div>
